# codex-quota-bar

./: .gitignore  LICENSE  README.md  README_EN.md  THIRD_PARTY_NOTICES.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx  styles.css  types.ts  visual.test.ts  visual.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  network.rs  quota.rs  radar.rs  settings.rs  taskbar.rs  updater.rs  visual.rs
