[package]
name = "codex-quota-bar"
version = "0.12.0"
description = "Codex quota display embedded beside the Windows notification area"
authors = ["Codex Quota Bar contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "codex_quota_bar_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.55"
